display updater log
Change-Id: I216ade81bfc9d6f08fba578a7541fed3de48231d
Signed-off-by: qiujian <qiujian@rock-chips.com>

--- a/updater/updaterwidget.ui
+++ b/updater/updaterwidget.ui
@@ -33,6 +33,9 @@
     </layout>
    </item>
    <item>
+    <widget class="QTextBrowser" name="m_textBrowser"/>
+   </item>
+   <item>
     <widget class="QPushButton" name="m_updatePushButton">
      <property name="text">
       <string>update</string>
