set style sheet for slider
Change-Id: I2977be0da530f025507ec7771d5d4d219c2f9aac
Signed-off-by: qiujian <qiujian@rock-chips.com>

--- a/res_setting.qrc
+++ b/res_setting.qrc
@@ -24,5 +24,6 @@
         <file>image/setting/calendar.png</file>
         <file>image/setting/speaker.png</file>
         <file>image/setting/update.png</file>
+        <file>image/setting/slider.png</file>
     </qresource>
 </RCC>
