update bluetooth code.
Change-Id: I7ccba034e5e794b28feea771d317f5e7f030dbad
Signed-off-by: kevin.chen <kevin.chen@rock-chips.com>

--- a/res_setting.qrc
+++ b/res_setting.qrc
@@ -25,5 +25,7 @@
         <file>image/setting/speaker.png</file>
         <file>image/setting/update.png</file>
         <file>image/setting/slider.png</file>
+        <file>image/setting/bluetooth_item_icon.png</file>
+        <file>image/setting/bluetooth_scan.png</file>
     </qresource>
 </RCC>
